deps/crates/vendor/zerocopy-derive/tests/ui/cfgs/union_into_bytes_cfg.nightly.stderr
error: requires --cfg zerocopy_derive_union_into_bytes;
       please let us know you use this feature: https://github.com/google/zerocopy/discussions/1802
  --> tests/ui-nightly/cfgs/union_into_bytes_cfg.rs:20:10
   |
20 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
